--- a/client/src/render/locales/lang/en_US.json
+++ b/client/src/render/locales/lang/en_US.json
@@ -6,5 +6,7 @@
     "首页推荐": "recommend news",
     "体育": "PE",
     "电子竞技": "e-gaming",
-    "音乐": "music"
+    "音乐": "music",
+    "发送消息": "send msg",
+    "聊天": "chat room"
 }
